--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,32 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --a-black: #1d1d1d;
+  --a-white: #fffdf8;
+  --background: #fffdf8;
+  --foreground: #1d1d1d;
 }
 
-@theme inline {
+@theme {
+  --font-melodrama: var(--font-melodrama);
+  --font-pencerio: var(--font-pencerio);
+  --font-supreme: var(--font-supreme);
+
+  --color-a-black: var(--a-black);
+  --color-a-white: var(--a-white);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #1d1d1d;
+    --foreground: #fffdf8;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-supreme);
 }
